--- a/Julia/Project.toml
+++ b/Julia/Project.toml
@@ -3,6 +3,7 @@ BayesianOptimization = "4c6ed407-134f-591c-93fa-e0f7c164a0ec"
 ControlSystems = "a6e380b2-a6ca-5380-bf3e-84a91bcd477e"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GaussianProcesses = "891a1506-143c-57d2-908e-e1f8e92e6de9"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
